Fix : Delete not used enigma difficulty route
